fix : 메서드 정리